move search to a separate activity

--- a/app/src/main/res/layout/result_item.xml
+++ b/app/src/main/res/layout/result_item.xml
@@ -37,8 +37,14 @@
         android:id="@+id/btn_connect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintDimensionRatio="1:1"
         android:contentDescription="@string/connect"
         android:src="@drawable/ic_bluetooth"
+        app:layout_constraintHeight_max="72dp"
+        app:layout_constraintHeight_min="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
