--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,7 +26,7 @@
         android:id="@+id/debug_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start|bottom"
         android:text="@string/app_name" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
