--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_reconnect"
+        android:id="@+id/action_start_service"
         android:orderInCategory="100"
-        android:title="@string/action_reconnect"
+        android:title="@string/action_start_service"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_stop_service"
+        android:orderInCategory="100"
+        android:title="@string/action_stop_service"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_test"
+        android:orderInCategory="100"
+        android:title=""
         app:showAsAction="never" />
 </menu>
