--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,8 +12,8 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="rocks.tbog.touchblue.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_device_settings"
+        android:name="rocks.tbog.touchblue.ui.settings.DeviceSettingsFragment"
+        android:label="@string/menu_device_settings"
+        tools:layout="@layout/fragment_device_settings" />
 </navigation>
